init_my_ubuntu - CHANGELOG
==========================

[Legend]
+ Feature Added
- Feature Removed
^ Enhancement
* Bug Fix

[v1.0] 03.05.2014

+ Initial release
+ Basic installation of packages
+ Setup AOSP build deps

[v1.1] 06.05.2014

+ Added shutdown when done
* Fixed a few issues in script
* Fixed CHANGELOG initial release date

[v1.2] 11.05.2014

+ Added download and install packages (DAP)
+ Added provition to add PPAs
^ Segregated packages into catagories
^ Enhanced script debuggability

[v1.3] 29.05.2018

+ Added Download Only (DO) support

[v1.4] 28.04.2020

^ Added functions for post install
^ Support for Ubuntu 20.04 LTS

[v1.5] 30.04.2020

^ Added more prints to make script verbose
^ Enabled logging to file
^ Fix borken installations before starting
* Fix logging